Update README, project structure, and gitignore

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/orders"><i class="fas fa-box me-1"></i> Orders</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about"><i class="fas fa-users me-1"></i> About Us</a>
+                    </li>
                     
                     {% if session.get('user_id') %}
                     <li class="nav-item ms-lg-3">
@@ -89,7 +92,7 @@
                     <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
-            <p class="text-muted mb-0">&copy; 2024 Best Buy Finder. All rights reserved.</p>
+            <p class="text-muted mb-0">&copy; 2026 Best Buy Finder. All rights reserved.</p>
         </div>
     </footer>
 
